@@ -172,7 +172,7 @@
 #' # the same pitch contour, but harder b/c of subharmonics and jitter
 #' sound2 = soundgen(sylLen = 900, pitch = list(
 #'   time = c(0, .3, .8, 1), value = c(300, 900, 400, 2300)),
-#'   noise = list(time = c(0, 900), value = c(-40, 20)),
+#'   noise = list(time = c(0, 900), value = c(-40, 0)),
 #'   subDep = 100, jitterDep = 0.5, nonlinBalance = 100, temperature = 0.001)
 #' # playme(sound2, 16000)
 #' a2 = analyze(sound2, samplingRate = 16000, plot = TRUE, pathfinding = 'slow')
@@ -196,6 +196,10 @@
 #' a = analyze(sound2, samplingRate = 16000, summary = FALSE)  # frame-by-frame
 #' a = analyze(sound2, samplingRate = 16000, summary = TRUE,
 #'             summaryStats = c('mean', 'range'))  # one row per sound
+#' # ...with custom summaryStats
+#' difRan = function(x) diff(range(x))
+#' a = analyze(sound2, samplingRate = 16000, summary = TRUE,
+#'             summaryStats = c('mean', 'difRan'))
 #'
 #' # Save the plot
 #' a = analyze(sound, samplingRate = 16000,
@@ -965,10 +969,9 @@ analyze = function(x,
     for (v in 3:(ncol(result) - 1)) {  # -1 for voiced (not summarized)
       for (s in 1:length(summaryStats)) {
         if (any(is.finite(result[, colnames(result)[v]]))) {
-          mySummary = do.call(
-            summaryStats[s],
-            list(result[, colnames(result)[v]], na.rm = TRUE)
-          )
+          d = na.omit(result[, colnames(result)[v]])
+          f = eval(parse(text = summaryStats[s]))
+          mySummary = do.call(f, list(d))
           # for smth like range, collapse and convert to character
           if (length(mySummary) > 1) {
             mySummary = paste0(mySummary, collapse = ', ')
